2006-03-02  Sven Neumann  <sven@gimp.org>

	* autogen.sh: readded version check for glib-gettextize.

2005-03-02  Øyvind Kolås  <pippin@gimp.org>

	* autogen.sh: added improved check_version() function that handles
	multiple digits in major/minor/micro.

2006-03-02  Sven Neumann  <sven@gimp.org>

	* autogen.sh: removed version check for glib-gettextize. It didn't
	work with glib 2.10.x.

2006-03-01  Sven Neumann  <sven@gimp.org>

	* app/about.h: use U+00A9 COPYRIGHT SIGN.

2006-02-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/Makefile.am
	* plug-ins/pygimp/pygimp-util.h: New file, provides only an
	initialization wrapper for now (pygimp_init_pygobject).

	* plug-ins/pygimp/gimpcolormodule.c
	* plug-ins/pygimp/gimpenumsmodule.c: Use pygimp_init_pygobject here.
	Closes bug #332622.

2006-02-28  Sven Neumann  <sven@gimp.org>

	* app/core/gimpbrush.c
	* app/core/gimpbuffer.c
	* app/core/gimpimagefile.c
	* app/core/gimppattern.c
	* app/dialogs/preferences-dialog.c
	* app/tools/gimpmeasuretool.c
	* app/tools/gimprectangletool.c
	* app/tools/gimprectselecttool.c
	* app/widgets/gimpimagepropview.c
	* app/widgets/gimpsizebox.c
	* app/widgets/gimptemplateeditor.c
	* plug-ins/common/ccanalyze.c
	* plug-ins/common/svg.c
	* plug-ins/common/wmf.c
	* plug-ins/imagemap/imap_cmd_guides.c
	* plug-ins/imagemap/imap_statusbar.c: use U+00D7 MULTIPLICATION SIGN
	instead of x when displaying sizes.

2006-02-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c: coding style cleanup.

2006-02-27  Manish Singh  <yosh@gimp.org>

	* app/base/cpu-accel.c
	* app/composite/gimp-composite-3dnow.h
	* app/composite/gimp-composite-mmx.h
	* app/composite/gimp-composite-sse.h
	* app/composite/gimp-composite-sse2.h: check for __PIC__ in addition
	to PIC.

2006-02-27  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage-merge.c: purely cosmetic change.

2006-02-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/animationplay.c (detach_callback): show the