@@ -1979,7 +1979,7 @@ static ProcRecord image_raise_layer_proc =
   "gimp-image-raise-layer",
   "gimp-image-raise-layer",
   "Raise the specified layer in the image's layer stack",
-  "This procedure raises the specified layer one step in the existing layer stack. It will not move the layer if there is no layer above it, or the layer has no alpha channel.",
+  "This procedure raises the specified layer one step in the existing layer stack. It will not move the layer if there is no layer above it.",
   "Spencer Kimball & Peter Mattis",
   "Spencer Kimball & Peter Mattis",
   "1995-1996",
@@ -2035,7 +2035,7 @@ static ProcRecord image_lower_layer_proc =
   "gimp-image-lower-layer",
   "gimp-image-lower-layer",
   "Lower the specified layer in the image's layer stack",
-  "This procedure lowers the specified layer one step in the existing layer stack. It will not move the layer if there is no layer below it, or the layer has no alpha channel.",
+  "This procedure lowers the specified layer one step in the existing layer stack. It will not move the layer if there is no layer below it.",
   "Spencer Kimball & Peter Mattis",
   "Spencer Kimball & Peter Mattis",
   "1995-1996",
@@ -2091,7 +2091,7 @@ static ProcRecord image_raise_layer_to_top_proc =
   "gimp-image-raise-layer-to-top",
   "gimp-image-raise-layer-to-top",
   "Raise the specified layer in the image's layer stack to top of stack",
-  "This procedure raises the specified layer to top of the existing layer stack. It will not move the layer if there is no layer above it, or the layer has no alpha channel.",
+  "This procedure raises the specified layer to top of the existing layer stack. It will not move the layer if there is no layer above it.",
   "Wolfgang Hofer, Sven Neumann",
   "Wolfgang Hofer",
   "1998",
@@ -2147,7 +2147,7 @@ static ProcRecord image_lower_layer_to_bottom_proc =
   "gimp-image-lower-layer-to-bottom",
   "gimp-image-lower-layer-to-bottom",
   "Lower the specified layer in the image's layer stack to bottom of stack",
-  "This procedure lowers the specified layer to bottom of the existing layer stack. It will not move the layer if there is no layer below it, or the layer has no alpha channel.",
+  "This procedure lowers the specified layer to bottom of the existing layer stack. It will not move the layer if there is no layer below it.",
   "Wolfgang Hofer, Sven Neumann",
   "Wolfgang Hofer",
   "1998",
@@ -2730,7 +2730,7 @@ static ProcRecord image_lower_channel_proc =
   "gimp-image-lower-channel",
   "gimp-image-lower-channel",
   "Lower the specified layer in the image's layer stack",
-  "This procedure lowers the specified layer one step in the existing layer stack. It will not move the layer if there is no layer below it, or the layer has no alpha channel.",
+  "This procedure lowers the specified layer one step in the existing layer stack. It will not move the layer if there is no layer below it.",
   "Spencer Kimball & Peter Mattis",
   "Spencer Kimball & Peter Mattis",
   "1995-1996",
