@@ -1,5 +1,14 @@
 2006-03-02  Sven Neumann  <sven@gimp.org>
 
+	* tools/pdbgen/pdb/image.pdb: corrected documentation for
+	gimp_image_[lower|raise]_layer(). We do not any longer refuse to
+	raise and lower based on a missing alpha channel.
+
+	* app/pdb/image_cmds.c
+	* libgimp/gimpimage_pdb.c: regenerated.
+
+2006-03-02  Sven Neumann  <sven@gimp.org>
+
 	* autogen.sh: readded version check for glib-gettextize.
 
 2005-03-02  Øyvind Kolås  <pippin@gimp.org>
